--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             
            <div id="locations">
-               <div class="test">
+               <div class="title-location">
                    <h2>Locations</h2>
                </div>
                <div class="address-block">
@@ -75,10 +75,12 @@
             </div>
         
         <footer>
-            <h2>The Tea Cozy</h2>
-            <span>contact@theteacozy.com</span>
-            <span>917-555-8904</span>
-            <span class="copy">copyright The Tea Cozy 2017</span>
+            <div class="contact">
+                <h2>The Tea Cozy</h2>
+                <h5>contact@theteacozy.com</h5>
+                <h5>917-555-8904</h5>
+            </div>
+            <h5 class="copy">copyright The Tea Cozy 2017</h5>
         </footer> 
 
         </div>
